// client/client.js
import grpc from '@grpc/grpc-js';
import protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

// Cargar el archivo proto
const PROTO_PATH = path.join(__dirname, '../proto/universidad.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
    keepCase: true,
    longs: String,
    enums: String,
    defaults: true,
    oneofs: true
});

const universidadProto = grpc.loadPackageDefinition(packageDefinition).universidad;

// Crear cliente
const client = new universidadProto.UniversidadService(
    'localhost:50051',
    grpc.credentials.createInsecure()
);

// Funciones auxiliares para llamadas gRPC
function llamadaGrpc(method, request) {
    return new Promise((resolve, reject) => {
        client[method](request, (error, response) => {
            if (error) {
                reject(error);
            } else {
                resolve(response);
            }
        });
    });
}

// Funciones espec√≠ficas del cliente
async function agregarEstudiante(estudiante) {
    try {
        const response = await llamadaGrpc('AgregarEstudiante', estudiante);
        console.log(`‚úÖ ${response.mensaje}`);
        return response;
    } catch (error) {
        console.error(`‚ùå Error al agregar estudiante: ${error.details}`);
        throw error;
    }
}

async function agregarCurso(curso) {
    try {
        const response = await llamadaGrpc('AgregarCurso', curso);
        console.log(`‚úÖ ${response.mensaje}`);
        return response;
    } catch (error) {
        console.error(`‚ùå Error al agregar curso: ${error.details}`);
        throw error;
    }
}

async function inscribirEstudiante(ciEstudiante, codigoCurso) {
    try {
        const response = await llamadaGrpc('InscribirEstudiante', {
            ci_estudiante: ciEstudiante,
            codigo_curso: codigoCurso
        });
        console.log(`‚úÖ ${response.mensaje}`);
        return response;
    } catch (error) {
        console.error(`‚ùå Error al inscribir estudiante: ${error.details}`);
        throw error;
    }
}

async function listarCursosDeEstudiante(ci) {
    try {
        const response = await llamadaGrpc('ListarCursosDeEstudiante', { ci });
        console.log(`\nüìö ${response.mensaje}`);
        if (response.cursos && response.cursos.length > 0) {
            response.cursos.forEach((curso, index) => {
                console.log(`   ${index + 1}. ${curso.nombre} (${curso.codigo}) - Docente: ${curso.docente}`);
            });
        } else {
            console.log('   No est√° inscrito en ning√∫n curso');
        }
        return response;
    } catch (error) {
        console.error(`‚ùå Error al listar cursos: ${error.details}`);
        throw error;
    }
}

async function listarEstudiantesDeCurso(codigo) {
    try {
        const response = await llamadaGrpc('ListarEstudiantesDeCurso', { codigo });
        console.log(`\nüë• ${response.mensaje}`);
        if (response.estudiantes && response.estudiantes.length > 0) {
            response.estudiantes.forEach((estudiante, index) => {
                console.log(`   ${index + 1}. ${estudiante.nombres} ${estudiante.apellidos} - CI: ${estudiante.ci} - Carrera: ${estudiante.carrera}`);
            });
        } else {
            console.log('   No hay estudiantes inscritos en este curso');
        }
        return response;
    } catch (error) {
        console.error(`‚ùå Error al listar estudiantes: ${error.details}`);
        throw error;
    }
}

// Demostraci√≥n completa del sistema
async function demostracionCompleta() {
    console.log('üéì INICIANDO DEMOSTRACI√ìN DEL SISTEMA UNIVERSITARIO gRPC\n');
    console.log('=' .repeat(60));

    try {
        // 1. Registrar un estudiante
        console.log('\n1. üÜï REGISTRANDO ESTUDIANTE');
        console.log('-'.repeat(40));
        const estudiante1 = {
            ci: '12345678',
            nombres: 'Mar√≠a',
            apellidos: 'Gonzalez',
            carrera: 'Ingenier√≠a Inform√°tica'
        };
        await agregarEstudiante(estudiante1);

        // 2. Registrar dos cursos
        console.log('\n2. üìö REGISTRANDO CURSOS');
        console.log('-'.repeat(40));
        
        const curso1 = {
            codigo: 'INF-101',
            nombre: 'Programaci√≥n I',
            docente: 'Dr. Carlos Rodr√≠guez'
        };
        await agregarCurso(curso1);

        const curso2 = {
            codigo: 'MAT-201',
            nombre: 'C√°lculo Avanzado',
            docente: 'Dra. Ana Mart√≠nez'
        };
        await agregarCurso(curso2);

        const curso3 = {
            codigo: 'FIS-101',
            nombre: 'F√≠sica General',
            docente: 'Dr. Luis Garc√≠a'
        };
        await agregarCurso(curso3);

        // 3. Inscribir al estudiante en ambos cursos
        console.log('\n3. üéì REALIZANDO INSCRIPCIONES');
        console.log('-'.repeat(40));
        await inscribirEstudiante('12345678', 'INF-101');
        await inscribirEstudiante('12345678', 'MAT-201');
        
        // Intentar inscribir nuevamente (debe fallar)
        console.log('\n   üîÑ Intentando inscribir en curso ya existente...');
        try {
            await inscribirEstudiante('12345678', 'INF-101');
        } catch (error) {
            console.log('   ‚úÖ Correcto: El sistema previno inscripci√≥n duplicada');
        }

        // 4. Registrar otro estudiante y inscribirlo
        console.log('\n4. üÜï REGISTRANDO SEGUNDO ESTUDIANTE');
        console.log('-'.repeat(40));
        const estudiante2 = {
            ci: '87654321',
            nombres: 'Juan',
            apellidos: 'P√©rez',
            carrera: 'Matem√°ticas'
        };
        await agregarEstudiante(estudiante2);
        await inscribirEstudiante('87654321', 'INF-101');
        await inscribirEstudiante('87654321', 'FIS-101');

        // 5. Consultar los cursos del primer estudiante
        console.log('\n5. üìã CONSULTANDO CURSOS DEL ESTUDIANTE 1');
        console.log('-'.repeat(40));
        await listarCursosDeEstudiante('12345678');

        // 6. Consultar los estudiantes del curso de Programaci√≥n
        console.log('\n6. üë• CONSULTANDO ESTUDIANTES DEL CURSO PROGRAMACI√ìN I');
        console.log('-'.repeat(40));
        await listarEstudiantesDeCurso('INF-101');

        // 7. Consultar cursos del segundo estudiante
        console.log('\n7. üìã CONSULTANDO CURSOS DEL ESTUDIANTE 2');
        console.log('-'.repeat(40));
        await listarCursosDeEstudiante('87654321');

        // 8. Consultar estudiantes de F√≠sica
        console.log('\n8. üë• CONSULTANDO ESTUDIANTES DEL CURSO F√çSICA GENERAL');
        console.log('-'.repeat(40));
        await listarEstudiantesDeCurso('FIS-101');

        // 9. Pruebas de error
        console.log('\n9. üß™ PRUEBAS DE MANEJO DE ERRORES');
        console.log('-'.repeat(40));
        
        console.log('   üîç Intentando listar cursos de estudiante inexistente...');
        try {
            await listarCursosDeEstudiante('99999999');
        } catch (error) {
            console.log('   ‚úÖ Correcto: El sistema manej√≥ el estudiante no encontrado');
        }

        console.log('   üîç Intentando listar estudiantes de curso inexistente...');
        try {
            await listarEstudiantesDeCurso('CURSO-INEXISTENTE');
        } catch (error) {
            console.log('   ‚úÖ Correcto: El sistema manej√≥ el curso no encontrado');
        }

        console.log('\n' + '=' .repeat(60));
        console.log('üéâ DEMOSTRACI√ìN COMPLETADA EXITOSAMENTE!');
        console.log('‚ú® Todos los servicios gRPC funcionan correctamente');

    } catch (error) {
        console.error('\nüí• Error durante la demostraci√≥n:', error);
    }
}

// Ejecutar la demostraci√≥n
demostracionCompleta();